--- a/Changes
+++ b/Changes
@@ -1,5 +1,8 @@
 Revision history for Perl extension Data::ParseBinary.
 
+0.02  July 22, 2008
+	- A lot of bug fixes, especially in the build op.
+
 0.01  July 12, 2008
 	- original version; created by Shmuel Fomberg.
 
