Import of SEMUELF/Data-ParseBinary-0.04 from CPAN.
gitpan-cpan-distribution: Data-ParseBinary
gitpan-cpan-version:      0.04
gitpan-cpan-path:         SEMUELF/Data-ParseBinary-0.04.tar.gz
gitpan-cpan-author:       SEMUELF
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -1,5 +1,10 @@
 Revision history for Perl extension Data::ParseBinary.
 
+0.04  August 13, 2008
+    - Worked on the Streams
+    - Created File Stream
+    - Revisied Flush operation
+
 0.03  August 10, 2008
     - Worked on the streams (string, stringref, warp, bit)
 	- Created StringBuffer
