--- a/README
+++ b/README
@@ -1,5 +1,5 @@
-Data::ParseBinary version 0.04
-==============================
+Data::ParseBinary version
+=========================
 
 This module is a Perl port for PyConstructs 2
 See http://construct.wikispaces.com/ for the original package
