--- a/Changes
+++ b/Changes
@@ -1,5 +1,11 @@
 Revision history for Perl extension Data::ParseBinary.
 
+0.12 December 28, 2008
+	- Documentation
+	- Peek now is a NOP on build
+	- Peek can now Peek Far (not zero)
+	- BitStream now tell but can not seek
+
 0.11 December 11, 2008
 	- Completing the design changes
 	- Depricated Ranges, Optional and Select
