--- a/Changes
+++ b/Changes
@@ -1,5 +1,9 @@
 Revision history for Perl extension Data::ParseBinary.
 
+0.20 January 31, 2009
+	- Strings now support encoding
+	- Added the Char construct
+
 0.13 January 5, 2009
 	- Documentation
 	- Anchor is now a Value
