Import of SEMUELF/Data-ParseBinary-0.25 from CPAN.
gitpan-cpan-distribution: Data-ParseBinary
gitpan-cpan-version:      0.25
gitpan-cpan-path:         SEMUELF/Data-ParseBinary-0.25.tar.gz
gitpan-cpan-author:       SEMUELF
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -1,5 +1,9 @@
 Revision history for Perl extension Data::ParseBinary.
 
+0.25 Aug 25, 2009
+	- Completed unit tests for all int 64 numbers 
+	- Bugfix: CString now respects its name (thanks Niobos)
+
 0.24 Aug 17, 2009
 	- Fixes to the Netflow library
 	- Fixes to big (64) integers
