Import of SEMUELF/Data-ParseBinary-0.29 from CPAN.
gitpan-cpan-distribution: Data-ParseBinary
gitpan-cpan-version:      0.29
gitpan-cpan-path:         SEMUELF/Data-ParseBinary-0.29.tar.gz
gitpan-cpan-author:       SEMUELF
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -1,5 +1,8 @@
 Revision history for Perl extension Data::ParseBinary.
 
+0.29 Dec 4, 2010
+	- Documentation fixes
+
 0.26 Sep 19, 2010
 	- Fixed a bug in Data::ParseBinary::FileSystem::MBR (thanks paul)
 
